--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vue": "^2.6.11",
     "vue-form-wizard": "^0.8.4",
     "vue-router": "^3.2.0",
+    "vue-the-mask": "^0.11.1",
     "vuetify": "^2.4.0",
     "vuex": "^3.4.0"
   },
